# Mandelbrot

./: CMakeLists.txt  README.md
include/: MandelbrotConfig.h.in
scripts/: run_mandelbrot.py
src/: BMP.c  BMP.h  Makefile  bmp_wr.c  mandel  mandel.c  mandel.h  mandel_txt.c  mandel_txt.h  mandelbrot.c  movie.c  movie.h
